# sui-indexer-only-event

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  command.md  docs.txt  events.md  requirement.md  skills-lock.json
crates/api-service/: Cargo.toml
crates/api-service/src/: config.rs  dto.rs  lib.rs  main.rs  metrics.rs  query_router.rs  state.rs
crates/api-service/src/routes/: health.rs  mod.rs  pools.rs  tokens.rs  tokens_list.rs
crates/event-bindings/: Cargo.toml
crates/event-bindings/src/: coin_metadata.rs  config.rs  flowx_manual.rs  lib.rs  parsed_json.rs  pool_id.rs  protocol.rs
crates/indexer/: Cargo.toml
crates/indexer-store/: Cargo.toml
crates/indexer-store/src/: composite.rs  kafka.rs  kafka_tests.rs  lib.rs  model.rs  postgres.rs  postgres_tests.rs  postgres_url.rs  schema.rs
crates/indexer/migrations/00000000000000_diesel_initial_setup/: up.sql
crates/indexer/migrations/2025-03-28-225607_watermarks/: up.sql
crates/indexer/migrations/2026-03-20-081396_watermarks_chain_id/: down.sql  up.sql
crates/indexer/src/: bootstrap.rs  config.rs  main.rs  oracle_gate.rs  runtime_tuning.rs
crates/indexer/src/pipelines/: checkpoint_objects.rs  common.rs  dex_pool.rs  dex_swap.rs  mod.rs  stub_events.rs  token_metadata.rs
crates/processors/: Cargo.toml
crates/processors/migrations/2026-06-20-120000_catalog/: down.sql  up.sql
crates/processors/migrations/2026-06-26-120000_discovery_source/: down.sql  up.sql
crates/processors/migrations_clickhouse/: 2026-07-05-token-ohlc-usd.sql  init.sql
crates/processors/migrations_timescale/2026-06-21-120000_metrics/: down.sql  up.sql
crates/processors/migrations_timescale/2026-06-21-120100_continuous_aggs/: down.sql  up.sql
crates/processors/migrations_timescale/2026-06-21-120200_rolloff_watermarks/: down.sql  up.sql
crates/processors/migrations_timescale/2026-06-25-160100_usd_metrics/: down.sql  up.sql
crates/processors/migrations_timescale/2026-06-30-120000_token_usd_oracle/: down.sql  up.sql
crates/processors/migrations_timescale/2026-07-04-080000_ohlc_15m_30m/: down.sql  up.sql
crates/processors/migrations_timescale/2026-07-05-120000_token_ohlc_usd_direct/: down.sql  up.sql
crates/processors/src/: coin_type.rs  config.rs  lib.rs  metrics.rs  normalized_swap.rs  runtime.rs  usd_enrichment.rs
crates/processors/src/catalog/: mod.rs
crates/processors/src/clickhouse/: mod.rs
crates/processors/src/ohlc/: merge.rs  mod.rs
crates/processors/src/oracle/: checkpoint_fetch.rs  mod.rs  readiness.rs  scan.rs  sui_usdc.rs  writer.rs
crates/processors/src/redis_cache/: mod.rs
crates/processors/src/rolloff/: mod.rs
crates/processors/src/store/: mod.rs  schema.rs
crates/processors/src/sui_grpc/: mod.rs
crates/processors/src/swap_normalizer/: hydration.rs  mod.rs  price.rs  protocol.rs
crates/processors/src/timescale/: mod.rs
crates/processors/src/token_ohlc/: bar.rs  bucket.rs  merge.rs  mod.rs
crates/processors/src/volume/: liquidity.rs  mod.rs  rollup.rs
examples/reconciliation/: .env.example  Cargo.toml
examples/reconciliation/src/: config.rs  indexer.rs  main.rs  report.rs
examples/rpc-service/: .env.example  Cargo.toml
examples/rpc-service/src/: config.rs  main.rs  mapper.rs
examples/rpc-service/src/db/: client.rs  mod.rs  query.rs  row.rs
examples/rpc-service/src/rpc/: mod.rs
examples/simple-sui-indexer/: .env.example  .gitignore  Cargo.toml
examples/simple-sui-indexer/event-bindings/: Cargo.toml
examples/simple-sui-indexer/event-bindings-probe/: README.md
examples/simple-sui-indexer/event-bindings/src/: lib.rs
examples/simple-sui-indexer/migrations/2026-06-02-082135-0000_transaction_digests/: down.sql
examples/simple-sui-indexer/migrations/2026-06-02-133809-0000_package_events/: down.sql
examples/simple-sui-indexer/migrations/2026-06-06-120000-0000_add_parsed_json/: up.sql
examples/simple-sui-indexer/migrations/2026-06-07-120000-0000_restore_canonical_event_type/: down.sql
examples/simple-sui-indexer/migrations/2026-06-08-120000-0000_drop_package_events/: down.sql  up.sql
examples/simple-sui-indexer/migrations/2026-06-09-120000-0000_drop_transaction_digests/: down.sql
examples/simple-sui-indexer/migrations/2026-06-26-120000-0000_bot_state/: down.sql  up.sql
examples/simple-sui-indexer/migrations/2026-06-26-140000-0000_bot_processed_swaps_ttl_idx/: down.sql  up.sql
examples/simple-sui-indexer/migrations/2026-06-26-150000-0000_bot_event_tx_seq_unique/: down.sql  up.sql
examples/simple-sui-indexer/migrations/2026-06-29-160000-0000_bot_pool_shared_version/: down.sql  up.sql
examples/simple-sui-indexer/reports/: bot_sandwich_report.md
examples/simple-sui-indexer/scripts/: analyze_bot_sandwich.py  send_funds_to_address_balance.sh
examples/simple-sui-indexer/src/: app_metrics.rs  bootstrap.rs  clickhouse_events.rs  handlers.rs  lib.rs  main.rs  metrics_config.rs  models.rs  schema.rs  static_event_decode.rs  telegram_format.rs  telegram_notify.rs
examples/simple-sui-indexer/src/bot/: cleanup.rs  cli.rs  config.rs  debug_log.rs  event_id.rs  event_types.rs  mod.rs  pool_shared.rs  (+4 more)
reconciliation/: .env.example  Cargo.toml
reconciliation/src/: config.rs  diff.rs  event_key.rs  fullnode.rs  indexer.rs
simple-sui-indexer/: Cargo.toml
simple-sui-indexer/event-bindings-probe/: Cargo.toml
simple-sui-indexer/event-bindings-probe/src/: lib.rs
simple-sui-indexer/event-bindings/src/: lib.rs
simple-sui-indexer/migrations/2026-06-02-082135-0000_transaction_digests/: up.sql
simple-sui-indexer/migrations/2026-06-02-133809-0000_package_events/: up.sql
simple-sui-indexer/migrations/2026-06-06-120000-0000_add_parsed_json/: down.sql
simple-sui-indexer/migrations/2026-06-07-120000-0000_restore_canonical_event_type/: up.sql
simple-sui-indexer/src/: handlers.rs  main.rs  models.rs  prefix.rs  schema.rs  static_event_decode.rs
simple-sui-indexer/src/pipeline/: processor.rs
tools/reconciliation/: .env.example  Cargo.toml
tools/reconciliation/src/: config.rs  diff.rs  event_key.rs  fullnode.rs  kafka.rs  main.rs  report.rs
(+136 files in other folders)
