[package]
name = "sui-token-indexer"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "sui-token-indexer"
path = "src/main.rs"

[dependencies]
indexer-store = { path = "../indexer-store" }
event-bindings = { path = "../event-bindings" }
sui-processors = { path = "../processors" }
sui-indexer-alt-framework.workspace = true
sui-indexer-alt-metrics.workspace = true
tokio.workspace = true
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
dotenvy.workspace = true
prometheus.workspace = true
url.workspace = true
diesel_migrations.workspace = true
rustls.workspace = true
http = "1"
