[package]
name = "sui-processors"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "catalog-worker"
path = "src/bin/catalog-worker.rs"

[[bin]]
name = "swap-normalizer"
path = "src/bin/swap-normalizer.rs"

[[bin]]
name = "volume-engine"
path = "src/bin/volume-engine.rs"

[[bin]]
name = "rolloff-job"
path = "src/bin/rolloff-job.rs"

[[bin]]
name = "oracle-bootstrap"
path = "src/bin/oracle-bootstrap.rs"

[dependencies]
indexer-store = { path = "../indexer-store" }
event-bindings = { path = "../event-bindings" }
tokio.workspace = true
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
dotenvy.workspace = true
prometheus.workspace = true
url.workspace = true
diesel.workspace = true
diesel-async.workspace = true
diesel_migrations.workspace = true
chrono.workspace = true
scoped-futures.workspace = true
rdkafka.workspace = true
rust_decimal.workspace = true
lru.workspace = true
rustls.workspace = true
hex.workspace = true
redis.workspace = true
clickhouse = { version = "0.13", features = ["chrono"] }
move-core-types = { git = "https://github.com/MystenLabs/sui.git", rev = "d10b7db79a6634acbc483ad8633a7d27fe3bc7c8" }
sui-types = { git = "https://github.com/MystenLabs/sui.git", rev = "d10b7db79a6634acbc483ad8633a7d27fe3bc7c8" }
sui-rpc = { git = "https://github.com/mystenlabs/sui-rust-sdk", rev = "e494a36a76a0aab8c5d66d5557995faee5c1fb09" }
prost = "0.14"
prost-types = "0.14.1"
object_store = { version = "0.11", features = ["http"] }
zstd = "0.13"
bytes = "1"
tonic = { version = "0.14.2", default-features = false, features = ["codegen", "transport"] }
thiserror = "2"
http = "1"
