[package]
name = "reconciliation"
version = "0.1.0"
edition = "2021"

[workspace]

[[bin]]
name = "reconciliation"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clickhouse = "0.13"
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
