[package]
name = "simple-sui-indexer"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["."]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }

[[bin]]
name = "backfill-parsed-json"
path = "src/bin/backfill_parsed_json.rs"

[dependencies]
sui-indexer-alt-framework = { git = "https://github.com/MystenLabs/sui.git", branch = "mainnet" }
sui-indexer-alt-metrics = { git = "https://github.com/MystenLabs/sui.git", branch = "mainnet" }
prometheus = "0.14"
event-bindings = { path = "event-bindings" }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
diesel = { version = "2.3", features = ["postgres", "r2d2", "serde_json", "64-column-tables"] }
diesel-async = { version = "0.8", features = ["bb8", "postgres", "async-connection-wrapper"] }
diesel_migrations = "2.3"
async-trait = "0.1"
url = "2.0"
dotenvy = "0.15"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcs = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
clickhouse = { version = "0.13", features = ["inserter"] }
base64 = "0.22"
