[package]
name = "sui-indexer-reconciliation"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "sui-indexer-reconciliation"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
dotenvy.workspace = true
rdkafka.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
